--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,12 @@
 	<packaging>war</packaging>
 	<version>1.1-SNAPSHOT</version>
 	
+	<properties>
+
 	<maven.compiler.source>1.8</maven.compiler.source>
 	<maven.compiler.target>1.8</maven.compiler.target>
-
+	
+	</properties>
 
 	<dependencies>
 		<dependency>
